--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,136 @@
   margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  font-size: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+a img {
+  border: none;
+}
+
+li {
+  list-style: none;
+}
+
+address,
+em,
+i {
+  font-style: normal;
+}
+
 /* font-family: 'Montserrat', sans-serif; */
 body {
   font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #333;
+}
+
+.wrap {
+  width: 100%;
+  overflow: hidden;
+}
+
+/* header */
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: #213135;
+  padding: 40px 0 25px;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+header .inner {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header .inner .logo {
+  display: inline-block;
+  font-size: 25px;
+  letter-spacing: 1px;
+}
+
+header .inner .gnbBtn {
+  display: block;
+  float: left;
+  width: 32px;
+  height: 12px;
+  position: relative;
+  margin-top: 15px;
+}
+
+header .inner .gnbBtn span {
+  background: #fff;
+  width: 100%;
+  height: 3px;
+  display: block;
+  position: absolute;
+  left: 0;
+}
+
+header .inner .gnbBtn span.a {
+  top: 0;
+}
+
+header .inner .gnbBtn span.b {
+  bottom: 0;
+}
+
+header .inner .contact {
+  display: block;
+  float: right;
+  margin-top: 10px;
+}
+
+/* contents */
+.contents {
+  background-color: #fff;
+}
+.contents .visual {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+.contents .visual .waves {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.contents .visual .title {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 70px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
